--- a/views/chatroom.jade
+++ b/views/chatroom.jade
@@ -24,7 +24,7 @@ block content
 							img(src='/images/icon-image.png')
 						.chat-btn#chat-btn-video
 							img(src='/images/icon-switchToVideo.png')
-						a(href='/chat/blockuser?id=#{usersInRoom[1]}')
+						a(href='/chat/blockuser?id=#{userIDs[1]}')
 							.chat-btn#chat-btn-block
 								img(src='/images/icon-block.png')
 						button.chat-btn#outgoingSubmit(type='submit') Submit
