solved issue where app was redirecting before room could be deleted

--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -2,17 +2,17 @@ nav
 	ul
 		li
 			a(href="/")
-				.navoption
+				.navoption#nav-dash
 					img(src="/images/icon-dashboard.png")
 		li
 			a(href="/forum")
-				.navoption
+				.navoption#nav-forum
 					img(src="/images/icon-forum.png")
 		li 
 			a(href="/chat")
-				.navoption
+				.navoption#nav-chat
 					img(src="/images/icon-chat.png")
 		li
 			a(href="/settings")
-				.navoption
+				.navoption#nav-settings
 					img(src="/images/icon-settings.png")
