--- a/views/edit.jade
+++ b/views/edit.jade
@@ -1,6 +1,7 @@
 extends layout
 block content
 	.container
+		include includes/nav-simple.jade
 		.forumWrap
 			h1 Edit Post
 			if (post.top === true)
