--- a/views/new.jade
+++ b/views/new.jade
@@ -1,7 +1,7 @@
 extends layout
 block content
 	.container
-		include includes/nav.jade
+		include includes/nav-simple.jade
 		.forumWrap
 			h1 New Post
 			.newPost
