--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -126,6 +126,9 @@ header {
         height: 100%;
         width: auto;
         margin: 0 auto; }
+    .container .open .alert {
+      padding-top: 20px;
+      color: #ea5455; }
     .container .open .form-login {
       max-width: 400px; }
       .container .open .form-login .forgot {
