--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -57,6 +57,7 @@ header {
         .logo { height: 50px; margin: 20px 0 50px 0;
             img { height: 100%; width: auto; margin: 0 auto; }
         }
+        .alert { padding-top: $pad; color: $red; }
         .form-login { max-width: 400px;
             .forgot { display: block;}
         }
