--- a/views/forgot.jade
+++ b/views/forgot.jade
@@ -5,6 +5,9 @@ block content
 		.open
 			.logo
 				img#logo(src='/images/ceda2.png')
+			h1 Forgot Password?
+			if (message.length > 0)
+				.alert #{message}
 			form.form-login(role='form', action="/forgot", method="POST")
 				input.form-input(type="text", name="email", placeholder="Email")
 				input.form-input(type="hidden", name="password", value='')
