again... fixed null chat history issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -523,6 +523,8 @@ header {
     position: fixed;
     bottom: 0px;
     width: 100%; }
+    .container .postReply form a {
+      cursor: pointer; }
   .container .settingsWrap .settingsA, .container .settingsWrap .settingsN {
     position: relative; }
     .container .settingsWrap .settingsA .settingsAccount, .container .settingsWrap .settingsA .settingsNotification, .container .settingsWrap .settingsN .settingsAccount, .container .settingsWrap .settingsN .settingsNotification {
