--- a/views/home.jade
+++ b/views/home.jade
@@ -54,7 +54,12 @@ block content
 						.logo
 							img#logo(src='/images/ceda2.png')
 						h1 Please enter a username
+						if (message.length > 0)
+							.alert #{message}
+						br
 						p Remember Ceda is anonymous, so choose a username that won't reveal any details about you
+						br
+						br
 						form.form-login(role='form', method='post', action='/username')
 							input.form-input(type='text', name='username', placeholder='Username')
 							input(type='hidden', name='email', value='#{user.email}')
