--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -246,7 +246,11 @@ header {
             p { color: $white; text-align: center; padding-top: 21px;}
          }
     }
-    .postReply {display :none; position: fixed; bottom: 0px; width: 100%;}
+    .postReply {display :none; position: fixed; bottom: 0px; width: 100%;
+        form {
+            a {cursor: pointer;}
+        }
+    }
 
 
 
