--- a/views/forgot.jade
+++ b/views/forgot.jade
@@ -8,7 +8,7 @@ block content
 			h1 Forgot Password?
 			if (message.length > 0)
 				.alert #{message}
-			if (message != "Please check your email! We've sent you instructions on how to reset your password.")
+			if (message != "Please check your email! We've sent you instructions on how to reset your password." || message != )
 				form.form-login(role='form', action="/forgot", method="POST")
 					input.form-input(type="text", name="email", placeholder="Email")
 					input.form-input(type="hidden", name="password", value='')
