--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     title= title
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='/css/styles.css')
-    script(src='../socket.io/socket.io.js')
+    script(src='/socket.io/socket.io.js')
     script(src='/js/jquery-3.1.1.min.js')
     script(src='/js/lib/adapter.js')
   body
