--- a/views/post.jade
+++ b/views/post.jade
@@ -4,6 +4,7 @@ block content
 		$(document).ready(function(){
 			$('.reply').on('click touch', function(){ 
 				$('.postReply').show();
+				$('#replytext').focus();
 				$('.options').hide();
 			});
 			$('.forgot').on('click touch', function(){ 
@@ -18,6 +19,8 @@ block content
 		include includes/nav-simple.jade	
 		.forumWrap
 			h1 #{thread[1]}
+			if (message.length > 0)
+				.alert #{message}
 			.threadList
 				ul.threads
 					for item,i in posts
@@ -32,7 +35,7 @@ block content
 									.post
 										p=item[3]
 									.bottom-left
-									if (user._id === posts[1])
+									if (user._id == item[1])
 										.bottom-right
 											a(href="/forum/edit?id=#{item[0]}") edit
 											a(href="/forum/delete?id=#{item[0]}") delete
@@ -46,7 +49,7 @@ block content
 									.post
 										p=item[3]
 									.bottom-left
-									if (currentuser === postuser)
+									if (user._id == item[1])
 										.bottom-right
 											a(href="/forum/edit?id=#{item[0]}") edit
 											a(href="/forum/delete?id=#{item[0]}") delete
@@ -55,6 +58,6 @@ block content
 				p Reply
 		.postReply
 			form.form-post(role='form', action="/forum/thread?id=#{thread[0]}", method="POST")
-				input.form-input(type="text", name="content", placeholder="Your reply")
+				input.form-input#replytext(type="text", name="content", placeholder="Your reply")
 				button.form-submit(type="submit") Submit
-				a.forgot(href="/") Cancel
+				a.forgot Cancel
