default user video settings set

--- a/views/chatroom.jade
+++ b/views/chatroom.jade
@@ -37,6 +37,8 @@ block content
 						.chat-btn#callButton
 							img(src='/images/icon-phone.png')
 						.chat-btn#muteButton
+							img(src='/images/icon-mute.png')
 						.chat-btn#killVideoButton
+							img(src='/images/icon-switchtoVideo-none.png')
 	script(src="https://simplewebrtc.com/latest-v2.js")
 	script(src='/js/client.js')
