--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -256,8 +256,8 @@ header {
 
 
     .settingsWrap { @extend .chatWraps;
-        .settingsA, .settingsN {position: relative;
-            .settingsAccount, .settingsNotification { text-align: left; background-color: white; @include box-shadow( 0px 7px 14px 0px rgba(0,0,0,0.2)); padding: $pad;
+        .settingsA, .settingsN, .settingsC {position: relative;
+            .settingsAccount, .settingsNotification, .settingsChat { text-align: left; background-color: white; @include box-shadow( 0px 7px 14px 0px rgba(0,0,0,0.2)); padding: $pad;
                 .setting { text-align: left; display: block; padding-top: $pad;
                     .settingTitle { color: $blue; display: inline-block; width: 30%; }
 
@@ -289,6 +289,9 @@ header {
         .settingsA { z-index: 100; margin: $pad*2 0 0; }
         .settingsN { z-index: 50; 
             .settingTitle { vertical-align: middle; padding-bottom: $pad; }
+        }
+        .settingsC { z-index: 25; 
+             .settingTitle { vertical-align: middle; padding-bottom: $pad; }
         }
     }
 
