pretty sure mute and video settings now work and save

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -431,6 +431,9 @@ header {
             height: 38px;
             width: auto;
             margin: 0 auto; }
+            .container .chatRoom .sendMessagesWrap .chatOptions .chat-btn img.disabled {
+              opacity: 0.6;
+              pointer-events: none; }
     .container .chatRoom .videoWrap {
       display: none;
       width: 100%;
