--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -210,7 +210,9 @@ header {
             .chatOptions {width: 100%; height: 40px;
                 .chat-btn { background-color: $red; color: $white; width: 25%; height: 100%; display: inline-block; border: none; cursor: pointer; vertical-align: top; text-align: center;
                     &:hover {background-color:$blue;}
-                    img {height: 38px; width: auto; margin: 0 auto;}
+                    img {height: 38px; width: auto; margin: 0 auto;
+                        &.disabled { opacity: 0.6; pointer-events: none; }
+                    }
                 }
             }
         }
