--- a/views/chatroom.jade
+++ b/views/chatroom.jade
@@ -64,7 +64,7 @@ block content
 						video#localVideo(autoplay muted)
 					.videoOptions
 						.chat-btn#switchToChat
-							img(src='/images/icon-backarrow-white.png')
+							img(src='/images/icon-backarrow.png')
 						.chat-btn#micOffButton
 							if (micSettings[0] == false)
 								img(src="/images/icon-microphone-true.png")
