--- a/views/settings.jade
+++ b/views/settings.jade
@@ -65,7 +65,19 @@ block content
 			.settingsN
 				.settingsNotification
 					h2 Notifications
+					.notifyError
 					.setting
+						.section
+							button.js-push-btn(disabled) Enable push messaging
+							section.subscription-details.js-subscription-details.is-invisible
+								p.
+									Once you've subscribed your user, you'd send their subscription to your server to store in a database so that when you want to send a message you can lookup the subscription and send a message to it.
+									To simplify things for this code lab copy the following details into the 
+								a(href="https://web-push-codelab.appspot.com/") Push Companion Site 
+								p.
+									and it'll send a push message for you, using the application server keys on the site - so make sure they match.
+								pre
+									code.js-subscription-json
 						.settingTitle
 							p messages
 						.onoffswitch
@@ -112,3 +124,4 @@ block content
 							label.onoffswitch-label(for='defaultVideo')
 								span.onoffswitch-inner
 								span.onoffswitch-switch
+	script(src='/js/notifications.js')
