--- a/public/scss/vars.scss
+++ b/public/scss/vars.scss
@@ -1,6 +1,6 @@
-$red: #ea5455;
-$blue: #213e64;
-$mint: #6ed4b3;
+$primary: #ea5455;
+$secondary: #213e64;
+$tertiary: #6ed4b3;
 $white: #ffffff;
 $grey: #ebebeb;
 $black: #000000;
