--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -143,7 +143,7 @@ header {
     } // end of nav
 
 
-    .simpleNav { height: 40px; width: 100%; background-color: $primary; padding-top: $pad/2;  @include box-shadow( 0px 7px 14px 0px rgba(0,0,0,0.2)); position: fixed; z-index: 300;
+    .simpleNav { height: 40px; width: 100%; background-color: $primary; padding-top: $pad/2;  @include box-shadow( 0px 7px 14px 0px rgba(0,0,0,0.2)); position: fixed; z-index: 300; @media screen and (min-width: 700px) {width: 500px; margin: 0 auto;}
         a { position: absolute; padding-top: $pad/4;
             .back { width: 15px; position: relative; margin-left: $pad; display: inline-block; vertical-align: top; 
                 img {width: 100%;}
@@ -217,7 +217,7 @@ header {
 
 
     // actual chat room
-    .chatRoom { padding-top: $pad;
+    .chatRoom { padding-top: $pad*2.5;
         .chatPartner { width: 100%; text-align: center;
             .online { width: 15px; height: 15px; @include border-radius($pad/2); background-color: $tertiary; margin-right: $pad; position: relative; display: inline-block; }
             h1 { display: inline-block; padding-right: $pad/2; }
